tests/sksl/errors/RedeclareStruct.dsl.glsl
### Compilation failed:

error: expected an identifier, but found type 'void'
error: expected a type, but found '{'
2 errors
